feat: adicionar estrutura de projeto, suporte a extracao, remuxing e cache json